# Jarvis

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  package.json  pyproject.toml
alembic/: env.py
prisma/: schema.prisma  seed.ts
src/app/: layout.tsx  page.tsx
src/app/api/auth/: route.ts
src/app/api/matches/: route.ts
src/app/api/players/: route.ts
src/app/billiards-league-2026/: page.tsx
src/components/: AddResultButton.tsx  LeagueTable.tsx  RecentMatches.tsx  TeamSummary.tsx
src/content_engine/: __init__.py
src/content_engine/api/: main.py
src/content_engine/api/routes/: hooks.py  scripts.py  trends.py  visuals.py  voice.py
src/content_engine/cli/: __init__.py  analyze.py  generate.py  scrape.py  visuals.py  voice.py
src/content_engine/config/: __init__.py  database.py  settings.py
src/content_engine/models/: __init__.py  analytics.py  base.py  characters.py  scripts.py  trends.py  videos.py
src/content_engine/services/: hook_analyzer.py  script_generator.py  trend_service.py
src/content_engine/services/llm/: __init__.py  openai_client.py
src/content_engine/services/scrapers/: __init__.py  reddit.py
src/content_engine/services/visuals/: __init__.py  leonardo_client.py  visual_generator.py
src/content_engine/services/voice/: __init__.py  elevenlabs_client.py  voice_generator.py
src/lib/: rankings.ts  team.ts
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_hook_analyzer.py  test_models.py  test_openai_client.py  test_scraper_reddit.py  test_script_generator.py  test_trend_service.py  test_visual_generator.py  test_voice_generator.py
